--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="on the code links" />
     <link rel="icon" href="%PUBLIC_URL%/typing.ico" />
+    <meta property="og:image" content="%PUBLIC_URL%/typing.ico" />
+    <meta property="og:image:alt" content="on the code typing" />
     <title>on the code</title>
   </head>
   <body>
