meta tags in index

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="on the code links" />
     <link rel="icon" href="%PUBLIC_URL%/typing.ico" />
-    <meta property="og:image" content="%PUBLIC_URL%/typing.ico" />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/on-the-code.appspot.com/o/onthecode_banner.jpg?alt=media&token=8fefe451-9949-4d0c-9367-ceea1e75133d"
+    />
     <meta property="og:image:alt" content="on the code typing" />
     <title>on the code</title>
   </head>
